--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /*
-  Theme Name: DevFolio
-  Theme URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
-  Author: BootstrapMade.com
-  License: https://bootstrapmade.com/license/
+Theme Name: DevFolio
+Theme URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
+Author: BootstrapMade.com
+License: https://bootstrapmade.com/license/
 */
 
 /*======================================
@@ -192,8 +192,8 @@ a:hover {
 
 .box-shadow-full {
   padding: 3rem 1.25rem;
-    position: relative;
-    background-color: #fff;
+  position: relative;
+  background-color: #fff;
   margin-bottom: 3rem;
   z-index: 2;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.06), 0 2px 5px 0 rgba(0, 0, 0, 0.2);
@@ -1071,8 +1071,12 @@ a:hover {
 
 footer {
   text-align: center;
-  color: #fff;
+  color:#fff;
   padding-bottom: 4rem;
+  background-color:black;
+  padding-top: 64px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 footer .copyright {
