--- a/css/custom.css
+++ b/css/custom.css
@@ -8,11 +8,15 @@
   display: none;
   -ms-flex-align: center;
   align-items: center;
-  margin-top:120px;
+  margin-top: 100px;
   width: 100%;
   -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000px;
   perspective: 1000px;
   text-align: center;
+/*  transition: -webkit-transform 0.5s ease !important;
+  transition: transform 0.5s ease !important;
+  transition: transform 0.5s ease, -webkit-transform 2s ease !important;*/
+}
+.carousel-item.active {
+
 }
