--- a/css/custom.css
+++ b/css/custom.css
@@ -34,3 +34,31 @@
 .card.card-blog{
   background-color:#ffffffd4;
 }
+.form-control:focus{
+  color: #495057;
+  background-color: #fff;
+  border-color: #c8233340;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem #88494f69;
+}
+.form-control{
+  display: block;
+  width: 100%;
+  height: calc(2.25rem + 2px);
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: .25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.reply-to button{
+  border-radius:15px;
+  background-color:#e00808;
+  margin-top:4px;
+  color:white;
+  width:150px;
+}
