--- a/css/custom.css
+++ b/css/custom.css
@@ -62,3 +62,21 @@
   color:white;
   width:150px;
 }
+.intro-title{
+  color: #fff;
+  font-weight: 600;
+  font-size: 3rem;
+  text-align:center;
+}
+.table-cell{
+  position: relative;
+  top: -400px;
+}
+.text-slider-items {
+  display: none;
+}
+.text-slider{
+  text-transform: uppercase;
+  color:#fff;
+  font-size: 2rem;
+}
