--- a/css/custom.css
+++ b/css/custom.css
@@ -90,7 +90,7 @@
   box-shadow:0px 10px 100px #d9d8e0e0;
 }
 .section-content .title{
-  margin-top:100px;
+  margin-top:10px;
 }
 .title{
   line-height: 1.33;
@@ -107,6 +107,9 @@
 .section{
   padding: 30px 0;
   position: relative;
+}
+.section-content-1{
+  margin-bottom: 2em;
 }
 .space-50{
   height:50px;
@@ -159,4 +162,11 @@
   font-size: 100%;
   max-width: 100%;
   height: auto;
+}
+.inter-title{
+  margin-top:8em;
+}
+.section-content-1 iframe{
+  width: 100%;
+  height: 60%;
 }
