--- a/madmin/css/custom.css
+++ b/madmin/css/custom.css
@@ -13,4 +13,8 @@
 }
 .sidebar li:not(:first-child){
   position:relative;
+  line-height: 1.3;
+}
+.font-weight-bold.mb-2{
+  white-space: normal;
 }
