x-editable cdn added

--- a/madmin/css/custom.css
+++ b/madmin/css/custom.css
@@ -18,3 +18,17 @@
 .font-weight-bold.mb-2{
   white-space: normal;
 }
+.glyphicon-ok:before {
+content: "\f00c";
+}
+.glyphicon-remove:before {
+content: "\f00d";
+}
+.glyphicon {
+display: inline-block;
+font: normal normal normal 14px/1 FontAwesome;
+font-size: inherit;
+text-rendering: auto;
+-webkit-font-smoothing: antialiased;
+-moz-osx-font-smoothing: grayscale;
+}
