--- a/madmin/css/custom.css
+++ b/madmin/css/custom.css
@@ -37,3 +37,10 @@ label.btn.btn-gradient-danger{
   margin-top: 10px;
   float:right;
 }
+.imagePreview{
+  width: 150%;
+  height: 70px;
+  background-position:center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
