--- a/madmin/css/custom.css
+++ b/madmin/css/custom.css
@@ -33,6 +33,7 @@
     -moz-osx-font-smoothing: grayscale;
 }
 .imagePreview{
+    margin: 10px 0px;
     width: 130%;
     height: 70px;
     background-position:center;
@@ -76,7 +77,7 @@ table td{
 }
 .btn-edit{
     background-color:#fe7c96;
-    color:#fff;
+    color:#fff !important;
 }
 .btn-edit:hover{
     background-color:#fed713;
